# frong-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yaml  env_example  frong.db  test.sh
.github/workflows/: docker-image.yml
cogs/: leaderboard.py  try-and-see.py
src/: main.rs
src/functions/: ask_frong.rs  database.rs  discord_functions.rs  frong.rs  googlethat.rs  leaderboard.rs  mod.rs
